2003-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogToBlob): Since MagickSeek(file,0,SEEK_END) is
	used to obtain the Blob size, MagickSeek(file,0,SEEK_SET) must be
	used to restore the seek position.  Thanks to John Cristy for
	bringing this to our attention.

2003-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawClipPath): Fix memory leak of
	clone_info->clip_path.  Problem reported by Vladimir
	<lvm@integrum.ru>.

2003-09-10  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/render.c: Fixed handling of arc primitive (see IM-5.5.8).

2003-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (DOCDIRS): www/api/types does not exist anymore.

2003-09-04  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/png.c: removed unused "loops_active" variable.

2003-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (LIBRARY_REVISION): Ensure that library does not
	overwrite released library from 1.0.3.  Change release date back
	to "unreleased".
	* GraphicsMagick 1.0.3 released.
	* index.html: Changed version to 1.0.3.
	* NEWS: Updated NEWS to reflect fixes since 1.0.2.
	* version.sh (PACKAGE_RELEASE_DATE): Updated release date to
	today's date.
	* VisualMagick: Incorporate configure/build improvements from the
	1.1 development version. This fixes build dependency problems and
	supports building the coders as a static library to improve build
	times.

2003-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Ensure that the reported image
	magic string is that of the user-specified input file rather than
	a temporary file prepared by an external delegate program.

2003-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (BlobToImage): Skip calling SetImageInfo() if
	magick is already set.

2003-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
